lib/lang/src/compile/type_inference/snapshots/lang__compile__type_inference__tests__lists__infer_type_of_list_with_spread_element.snap
---
source: lib/lang/src/compile/type_inference/mod.rs
expression: "infer_types(&Module::from_definitions(vec![VariableDefinition ::\n                                           new(\"x\", List ::\n                                               new(vec !\n                                                   [ListElement ::\n                                                    Multiple(List ::\n                                                             new(vec ! [],\n                                                                 SourceInformation\n                                                                 :: dummy(),)\n                                                             . into())],\n                                                   SourceInformation ::\n                                                   dummy(),), list_type,\n                                               SourceInformation :: dummy(),)\n                                           . into()]))"

---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: List(
                        List {
                            type_: List(
                                List {
                                    element: Number(
                                        Number {
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            elements: [
                                Multiple(
                                    List(
                                        List {
                                            type_: List(
                                                List {
                                                    element: Number(
                                                        Number {
                                                            source_information: SourceInformation {
                                                                source_name: "",
                                                                location: Location {
                                                                    line_number: 0,
                                                                    column_number: 0,
                                                                },
                                                                line: "",
                                                            },
                                                        },
                                                    ),
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            elements: [],
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                ),
                            ],
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: List(
                        List {
                            element: Number(
                                Number {
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        export_foreign: ExportForeign {
            names: {},
        },
        imports: [],
        import_foreigns: [],
    },
)
